--- a/home.css
+++ b/home.css
@@ -21,6 +21,10 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.switch {
+    margin: 0 20px;
+}
+
 .navbar-gif {
     height: 80px;
     /* Default height for larger screens */
