--- a/players.css
+++ b/players.css
@@ -177,15 +177,18 @@ html, body {
     color: #555;
 }
 
+
+
 /* Footer Styling */
 footer {
-    background-color: #fff;
-    padding: 20px;
+    background-color:  #2b1a47;
+    padding: 10px;
     text-align: center;
     position: relative;
     bottom: 0;
     width: 100%;
     font-size: 1rem;
+    color: white;
 }
 
 /* Animations */
